<resources>
    <string name="app_name">allcarsinone</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">Email</string>
    <string name="msg_create_new_account">Create new account</string>
    <string name="msg_geral_standxpto_pt">geral@standxpto.pt</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="msg_want_a_brand_new">Want a brand new vehicle?</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="msg_forgot_password">Forgot password?</string>
    <string name="msg_recover_password">Recover password</string>
    <string name="msg_sign_in">Sign In</string>
    <string name="change_password">Change Password</string>
    <string name="braga">Braga</string>
    <string name="hello">Hello</string>
    <string name="username">Username</string>
    <string name="start_looking_for_your_car">Start looking for your car</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="max">Max</string>
    <string name="all_cars_in_one">All Cars In One</string>
    <string name="default_stand">Default Stand</string>
    <string name="_999_000">€ 999.000</string>
    <string name="opinions">opinions</string>
    <string name="default_location">Default location</string>
    <string name="availability">Availability</string>
    <string name="buy">BUY</string>
    <string name="information">Information</string>
    <string name="comments">Comments</string>
    <string name="shared">Shared</string>
    <string name="test_drive">Test drive</string>
    <string name="description">Description</string>
    <string name="enter_your_payment_details">Enter your payment details</string>
    <string name="cardholder_name">CardHolder Name</string>
    <string name="card_number">Card Number</string>
    <string name="exp_month">Exp Month</string>
    <string name="exp_year">Exp Year</string>
    <string name="cvc">CVC</string>
    <string name="_3_or_4_digits_usually_found_on_the_signature_strip">3 or 4 digits usually found on the signature strip</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our</string>
    <string name="terms">Terms</string>
    <string name="today_s_sales">Today\'s Sales</string>
    <string name="update">UPDATE</string>
    <string name="notification_settings">Notification settings</string>
    <string name="share_favorites_with_the_stand">Share favorites with the stand</string>
    <string name="e_mail_notifications">E-mail notifications</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="delete_older_than_2_days">Delete older than 2 days</string>
    <string name="set_all_notifications_as_read">Set all notifications as read</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="notifications">Notifications</string>
    <string name="insert_vehicle">INSERT VEHICLE</string>
    <string name="edit">EDIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
