<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/generalBack"
android:orientation="vertical"
tools:context=".NotificationsActivity">

    <RelativeLayout
        android:id="@+id/NotificationsHeader_LAY"
        android:padding="@dimen/_30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageButton
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/backbutton"
            android:id="@+id/Notifications_backbutton_btn"
            android:background="@drawable/circle_button"
            android:layout_marginTop="20dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo_cropped" />
    </RelativeLayout>

    <TextView
        android:id="@+id/NotificationsTitle_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/NotificationsHeader_LAY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        style="@style/txtRed14"
        android:textStyle = "bold"
        android:text="@string/notification_settings" >
    </TextView>

    <LinearLayout
        android:id="@+id/Notifications_main_LAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="60dp"
        android:layout_marginHorizontal="@dimen/_30sp"
        app:layout_constraintTop_toBottomOf="@id/NotificationsTitle_TV" >

        <Switch
            android:id="@+id/Notifications_switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/set_all_notifications_as_read" />

        <Switch
            android:id="@+id/Notifications_switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/delete_older_than_2_days" />

        <Switch
            android:id="@+id/Notifications_switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/messages" />

        <Switch
            android:id="@+id/Notifications_switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/favorites" />

        <Switch
            android:id="@+id/Notifications_switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/e_mail_notifications" />

        <Switch
            android:id="@+id/Notifications_switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/notificationsTextBlue16"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:paddingVertical="@dimen/_20sp"
            android:text="@string/share_favorites_with_the_stand" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Notifications_update_btn"
        app:layout_constraintTop_toBottomOf="@+id/Notifications_main_LAY"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_18pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_18pxv"
        android:singleLine="true"
        style="@style/btnSolidRounded"
        android:text="@string/update"/>
</androidx.constraintlayout.widget.ConstraintLayout>