<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecoverPasswordActivity"
    android:id="@+id/RecoverPass_main_LAY"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylewhite_A700">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_group_2"
        android:scaleType="centerCrop" />

        <ScrollView
            android:id="@+id/RecoverPass_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_39pxv"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent">

            <LinearLayout
                android:id="@+id/RecoverPass_mid_LAY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_80sp"
                android:layout_marginBottom="@dimen/_40sp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView android:gravity="center"
                    android:id="@+id/RecoverPass_txtWelcome"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/_40sp"
                    android:text="@string/msg_recover_password"
                    style="@style/txtMontserratromanmedium24"/>

                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmail"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_email"
                        style="@style/txtMontserratromanregular14"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
                        android:drawableEnd="@drawable/drawable_img_group_6"
                        android:drawablePadding="@dimen/_23pxh"

                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_25pxh"
                        android:paddingStart="@dimen/_21pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:singleLine="true"
                        tools:text="email@allcarsinone.pt"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRecoverPassword"
                    style="@style/btnSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/change_password"
                    android:textAllCaps="true"
                    tools:text="@string/change_password" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sp"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_sign_in"
                    android:textAllCaps="true"
                    style="@style/txtMontserratromanmedium14"/>
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

