<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_toolbar_rl"
        android:padding="@dimen/_30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageButton
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/backbutton"
            android:id="@+id/Notifications_backbutton_btn"
            android:background="@drawable/circle_button"
            android:layout_marginTop="20dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo_cropped" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_form_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar_rl"
        app:layout_constraintBottom_toTopOf="@id/register_form_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserratromanmedium">
    </TextView>
    <LinearLayout
        android:id="@+id/register_form_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title_form_ll"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView android:ellipsize="end"
            android:id="@+id/register_username_tv"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/username"
            style="@style/txtMontserratromanregular14"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
            android:drawableEnd="@drawable/drawable_img_checkmark"
            android:drawablePadding="@dimen/_30pxh"
            android:hint="johndoe1900"
            android:id="@+id/register_username_et"
            android:layout_marginBottom="18dp"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:textColorHint="@color/black_900_cc"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/register_name_tv"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/name"
            style="@style/txtMontserratromanregular14"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
            android:drawableEnd="@drawable/drawable_img_checkmark"
            android:drawablePadding="@dimen/_30pxh"
            android:layout_marginBottom="18dp"
            android:hint="John Doe"
            android:id="@+id/register_name_et"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:textColorHint="@color/black_900_cc"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/register_email_tv"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/email"
            style="@style/txtMontserratromanregular14"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
            android:drawableEnd="@drawable/drawable_img_checkmark"
            android:drawablePadding="@dimen/_30pxh"
            android:layout_marginBottom="18dp"
            android:hint="jonhdoe@xpto.com"
            android:id="@+id/register_email_et"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:textColorHint="@color/black_900_cc"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/register_password_tv"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/password"
            style="@style/txtMontserratromanregular14"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
            android:drawableEnd="@drawable/drawable_img_checkmark"
            android:drawablePadding="@dimen/_30pxh"
            android:layout_marginBottom="18dp"
            android:id="@+id/register_password_et"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:textColorHint="@color/black_900_cc"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/register_confirmPassword_tv"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/confirm_password"
            style="@style/txtMontserratromanregular14"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_10"
            android:drawableEnd="@drawable/drawable_img_checkmark"
            android:drawablePadding="@dimen/_30pxh"
            android:layout_marginBottom="18dp"
            android:id="@+id/register_confirmPassword_et"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:textColorHint="@color/black_900_cc"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/register_register_btn"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@string/register"
            style="@style/btnSolidRounded"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/register_signin_btn"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@string/sign_in"
            style="?borderlessButtonStyle"
            android:textColor="@color/red_900" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>